# workflows

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: publish.yml
chart/: Chart.yaml
charts/workflow-templates/: Chart.yaml  values.yaml
charts/workflow-templates/templates/: _helpers.tpl
charts/workflow-templates/templates/jobs/: twitch_to_slack.yaml
manifests/templates/: tmp.yaml  twitch_to_slack.yaml
src/workflows/: __init__.py  constants.py  tools.py  util.py
src/workflows/jobs/: twitch_to_slack.py
src/workflows/repositories/: slack.py  twitch.py
