[project]
name = "workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "qmastermoo", email = "alex.harding@whale-net.net" }
]
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.33.3",
    "twitchapi>=4.3.1",
    "typer>=0.12.5",
]

[project.scripts]
workflows = "workflows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
