[project]
name = "workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "qmastermoo", email = "alex.harding@whale-net.net" }
]
requires-python = ">=3.11"
dependencies = [
    "iso8601>=2.1.0",
    "rfc3339>=6.2",
    "slack-sdk>=3.33.3",
    "twitchapi>=4.3.1",
    "typer>=0.12.5",
]

[project.scripts]
workflows = "workflows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
